moving the badge to the botton and fix spacing

--- a/material-overrides/assets/stylesheets/index-page.css
+++ b/material-overrides/assets/stylesheets/index-page.css
@@ -26,11 +26,15 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 1.2em 1.2em 0em;
-  gap: 0.75em;
+  gap: 0.25em;
   display: flex;
+}
+.subsection-wrapper .card-header .badge {
+  order: 2;
 }
 
 .subsection-wrapper .card .card-header h2.title {
+  order: 1; 
   padding: 0;
 }
 
